# cryptotokenkit-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_token_snapshot.rs  02_token_driver_snapshot.rs  03_token_keychain_contents_roundtrip.rs  04_token_session_auth_ops.rs  05_token_watcher_snapshot.rs  06_smart_card_session.rs  07_scard_slot_manager_slots.rs  08_smart_card_atr_parse.rs  09_token_delegate_bridges.rs  10_smart_card_user_interactions.rs  11_async_token_watcher.rs
src/: error.rs  ffi.rs  keychain.rs  lib.rs  private.rs  scard_slot_manager.rs  smart_card.rs  smart_card_atr.rs  smart_card_interaction.rs  smartcard.rs  token.rs  token_delegate.rs  token_driver.rs  token_keychain_contents.rs  token_session.rs  token_watcher.rs
src/async_api/: mod.rs
src/ffi/: scard_slot_manager.rs  smart_card.rs  smart_card_atr.rs  smart_card_interaction.rs  token.rs  token_delegate.rs  token_driver.rs  token_session.rs  token_watcher.rs
swift-bridge/: Package.swift
swift-bridge/Sources/CryptoTokenKitBridge/: Core.swift  SCardSlotManager.swift  SmartCard.swift  SmartCardATR.swift  SmartCardUserInteraction.swift  Support.swift  Token.swift  TokenDelegates.swift  TokenDriver.swift  TokenDriverStore.swift  TokenKeychainContents.swift  TokenSession.swift  TokenWatcher.swift
swift-bridge/Sources/CryptoTokenKitBridge/include/: CryptoTokenKitBridge.h  module.modulemap
tests/: error_and_tlv_tests.rs  scard_slot_manager_tests.rs  smart_card_atr_tests.rs  smart_card_tests.rs  smart_card_user_interaction_tests.rs  token_delegate_tests.rs  token_driver_tests.rs  token_keychain_contents_tests.rs  token_session_tests.rs  token_tests.rs  token_watcher_tests.rs
tests/fixtures/: sample-cert.der
