[package]
name = "cryptotokenkit-rs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/cryptotokenkit-rs"
repository = "https://github.com/doom-fish/cryptotokenkit-rs"
description = "Safe Rust bindings for Apple's CryptoTokenKit framework — token/session/watcher and smart-card helpers on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["cryptotokenkit", "smartcard", "piv", "fido2", "macos"]
categories = ["api-bindings", "os::macos-apis", "authentication"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
    "tests/**/*",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "cryptotokenkit"
crate-type = ["lib"]

[features]
default = []
async = ["dep:doom-fish-utils", "doom-fish-utils/futures-stream"]

[dependencies]
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.3, <0.4", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "11_async_token_watcher"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
